--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -31,4 +31,4 @@ jobs:
           push: true
           # С каким тегом будет загружен образ
           # Переменные тоже поддерживаются
-          tags: airat/test-docker-push:latest
+          tags: airatys/test-docker-push:latest
